argo-workflows/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: argo-workflows
  name: argo-workflows
spec:
  finalizers:
    - kubernetes
