argo-workflows/resources/argo-workflows-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
    acme.cert-manager.io/dns01-provider: cloudflare
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: argo-server
                port:
                  number: 2746
      host: argo-workflows.imjoseangel.eu.org
  tls:
    - hosts:
      - argo-workflows.imjoseangel.eu.org
      secretName: ingress-tls
